# agentic_governance

./: CHANGES.md  README.md  __init__.py  pyproject.toml  requirements.txt
agents/: session_isolation.py
auth/: claim_mapper.py  entra_config.py  entra_integration.py  token_factory.py  token_validator.py
cache/: governed_cache.py
catalog/: catalog.py
context_governance/: middleware.py
core/: exceptions.py  models.py
docs/: index.html
examples/: demo_entra_auth.py  full_scenario.py
injection_detection/: detector.py
mcp_server/: governance_server.py
orchestrator/: eligibility.py
policy_resolver/: resolver.py
tests/: test_entra_auth.py  test_framework.py
